// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal|UpdateNewProject mutation admin should be able to update a project. 1`] = `
Object {
  "updateNewProject": Object {
    "project": Object {
      "address": Object {
        "formatted": "Rue Claude Tillier, 75012 Paris, France",
        "json": "[{\\"address_components\\":[{\\"long_name\\":\\"Rue Claude Tillier\\",\\"short_name\\":\\"Rue Claude Tillier\\",\\"types\\":[\\"route\\"]},{\\"long_name\\":\\"Paris\\",\\"short_name\\":\\"Paris\\",\\"types\\":[\\"locality\\",\\"political\\"]},{\\"long_name\\":\\"Département de Paris\\",\\"short_name\\":\\"Département de Paris\\",\\"types\\":[\\"administrative_area_level_2\\",\\"political\\"]},{\\"long_name\\":\\"Île-de-France\\",\\"short_name\\":\\"IDF\\",\\"types\\":[\\"administrative_area_level_1\\",\\"political\\"]},{\\"long_name\\":\\"France\\",\\"short_name\\":\\"FR\\",\\"types\\":[\\"country\\",\\"political\\"]},{\\"long_name\\":\\"75012\\",\\"short_name\\":\\"75012\\",\\"types\\":[\\"postal_code\\"]}],\\"formatted_address\\":\\"Rue Claude Tillier, 75012 Paris, France\\",\\"geometry\\":{\\"bounds\\":{\\"south\\":48.847326,\\"west\\":2.3869495,\\"north\\":48.8493632,\\"east\\":2.3896115},\\"location\\":{\\"lat\\":48.8483203,\\"lng\\":2.3882419},\\"location_type\\":\\"GEOMETRIC_CENTER\\",\\"viewport\\":{\\"south\\":48.84699561970849,\\"west\\":2.386931519708499,\\"north\\":48.84969358029149,\\"east\\":2.389629480291502}},\\"place_id\\":\\"ChIJSQHl0Qxy5kcRn6k49MY9yWo\\",\\"types\\":[\\"route\\"]}]",
      },
      "archived": true,
      "authors": Array [
        Object {
          "__typename": "User",
          "displayName": "admin",
        },
        Object {
          "__typename": "User",
          "displayName": "user87",
        },
        Object {
          "__typename": "User",
          "displayName": "user88",
        },
      ],
      "cover": null,
      "customCode": "custom code",
      "description": "Project Description",
      "districts": Object {
        "edges": Array [
          Object {
            "node": Object {
              "name": "Centre ville",
            },
          },
        ],
      },
      "externalLink": null,
      "isExternal": false,
      "locale": null,
      "metaDescription": "metadescription",
      "opinionCanBeFollowed": true,
      "publishedAt": "2021-05-01 12:00:00",
      "restrictedViewers": Object {
        "edges": Array [
          Object {
            "node": Object {
              "title": "Super-administrateur",
            },
          },
          Object {
            "node": Object {
              "title": "Agent de la ville",
            },
          },
        ],
      },
      "slug": "budget-participatif-idf-3",
      "steps": Array [
        Object {
          "__typename": "PresentationStep",
          "body": "Project Description",
          "title": "presentation_step",
        },
        Object {
          "__typename": "CollectStep",
          "body": "Avec un saut conditionel sur le formulaire de dépôt, et oui rien que ça.",
          "title": "Collecte des projets Idf BRP 3",
        },
        Object {
          "__typename": "CollectStep",
          "body": "Encore une super étape de dépôt",
          "title": "Étape fermée, mais on peut modifier les réseaux sociaux des propositions",
        },
        Object {
          "__typename": "SelectionStep",
          "body": "La pré-sélection est en cours ! Les votes seront ouverts le 27 juin, un peu de patience...",
          "title": "Etudes des projets",
        },
        Object {
          "__typename": "SelectionStep",
          "body": "Franciliens, prêts à voter",
          "title": "Vote des Franciliens",
        },
        Object {
          "__typename": "SelectionStep",
          "body": "Gardez un oeil sur les projets !",
          "title": "Le suivi des projets lauréats",
        },
        Object {
          "__typename": "CollectStep",
          "body": "Collecte vote par sms",
          "title": "Collecte vote par sms",
        },
      ],
      "themes": Array [
        Object {
          "title": "Thème vide",
        },
      ],
      "title": "Budget Participatif IdF 3 zzzz",
      "type": Object {
        "title": "project.types.participatoryBudgeting",
      },
      "url": "https://capco.test/project/budget-participatif-idf-3/presentation/presentation-step",
      "visibility": "CUSTOM",
    },
  },
}
`;

exports[`Internal|UpdateNewProject mutation change access visibility when project has custom visibility 1`] = `
Object {
  "updateNewProject": Object {
    "project": Object {
      "id": "UHJvamVjdDpwcm9qZWN0R3JvdXAy",
      "title": "Projet pour le group2",
      "url": "https://capco.test/project/projet-pour-le-group2/questionnaire/questionnaire-step-pour-group2",
    },
  },
}
`;

exports[`Internal|UpdateNewProject mutation removing description should remove the presentation step containing the description 1`] = `
Object {
  "updateNewProject": Object {
    "project": Object {
      "address": Object {
        "formatted": "Rue Claude Tillier, 75012 Paris, France",
        "json": "[{\\"address_components\\":[{\\"long_name\\":\\"Rue Claude Tillier\\",\\"short_name\\":\\"Rue Claude Tillier\\",\\"types\\":[\\"route\\"]},{\\"long_name\\":\\"Paris\\",\\"short_name\\":\\"Paris\\",\\"types\\":[\\"locality\\",\\"political\\"]},{\\"long_name\\":\\"Département de Paris\\",\\"short_name\\":\\"Département de Paris\\",\\"types\\":[\\"administrative_area_level_2\\",\\"political\\"]},{\\"long_name\\":\\"Île-de-France\\",\\"short_name\\":\\"IDF\\",\\"types\\":[\\"administrative_area_level_1\\",\\"political\\"]},{\\"long_name\\":\\"France\\",\\"short_name\\":\\"FR\\",\\"types\\":[\\"country\\",\\"political\\"]},{\\"long_name\\":\\"75012\\",\\"short_name\\":\\"75012\\",\\"types\\":[\\"postal_code\\"]}],\\"formatted_address\\":\\"Rue Claude Tillier, 75012 Paris, France\\",\\"geometry\\":{\\"bounds\\":{\\"south\\":48.847326,\\"west\\":2.3869495,\\"north\\":48.8493632,\\"east\\":2.3896115},\\"location\\":{\\"lat\\":48.8483203,\\"lng\\":2.3882419},\\"location_type\\":\\"GEOMETRIC_CENTER\\",\\"viewport\\":{\\"south\\":48.84699561970849,\\"west\\":2.386931519708499,\\"north\\":48.84969358029149,\\"east\\":2.389629480291502}},\\"place_id\\":\\"ChIJSQHl0Qxy5kcRn6k49MY9yWo\\",\\"types\\":[\\"route\\"]}]",
      },
      "archived": true,
      "authors": Array [
        Object {
          "__typename": "User",
          "displayName": "admin",
        },
        Object {
          "__typename": "User",
          "displayName": "user87",
        },
        Object {
          "__typename": "User",
          "displayName": "user88",
        },
      ],
      "cover": null,
      "customCode": "custom code",
      "description": null,
      "districts": Object {
        "edges": Array [
          Object {
            "node": Object {
              "name": "Centre ville",
            },
          },
        ],
      },
      "externalLink": null,
      "isExternal": false,
      "locale": null,
      "metaDescription": "metadescription",
      "opinionCanBeFollowed": true,
      "publishedAt": "2021-05-01 12:00:00",
      "restrictedViewers": Object {
        "edges": Array [
          Object {
            "node": Object {
              "title": "Super-administrateur",
            },
          },
          Object {
            "node": Object {
              "title": "Agent de la ville",
            },
          },
        ],
      },
      "slug": "budget-participatif-idf-3",
      "steps": Array [
        Object {
          "__typename": "CollectStep",
          "body": "Avec un saut conditionel sur le formulaire de dépôt, et oui rien que ça.",
          "title": "Collecte des projets Idf BRP 3",
        },
        Object {
          "__typename": "CollectStep",
          "body": "Encore une super étape de dépôt",
          "title": "Étape fermée, mais on peut modifier les réseaux sociaux des propositions",
        },
        Object {
          "__typename": "SelectionStep",
          "body": "La pré-sélection est en cours ! Les votes seront ouverts le 27 juin, un peu de patience...",
          "title": "Etudes des projets",
        },
        Object {
          "__typename": "SelectionStep",
          "body": "Franciliens, prêts à voter",
          "title": "Vote des Franciliens",
        },
        Object {
          "__typename": "SelectionStep",
          "body": "Gardez un oeil sur les projets !",
          "title": "Le suivi des projets lauréats",
        },
        Object {
          "__typename": "CollectStep",
          "body": "Collecte vote par sms",
          "title": "Collecte vote par sms",
        },
      ],
      "themes": Array [
        Object {
          "title": "Thème vide",
        },
      ],
      "title": "Budget Participatif IdF 3 zzzz",
      "type": Object {
        "title": "project.types.participatoryBudgeting",
      },
      "url": "https://capco.test/project/budget-participatif-idf-3/collect/collecte-des-projets-idf-brp-3",
      "visibility": "CUSTOM",
    },
  },
}
`;

exports[`Internal|UpdateNewProject mutation should be able to re-order steps 1`] = `
Object {
  "updateNewProject": Object {
    "project": Object {
      "description": "Project Description",
      "steps": Array [
        Object {
          "__typename": "CollectStep",
          "id": "Q29sbGVjdFN0ZXA6Y29sbGVjdHN0ZXBTbXNWb3RlSWRmMw==",
          "label": "Collecte vote par sms",
        },
        Object {
          "__typename": "CollectStep",
          "id": "Q29sbGVjdFN0ZXA6Y29sbGVjdHN0ZXBJZGYz",
          "label": "Dépôt des projets",
        },
        Object {
          "__typename": "SelectionStep",
          "id": "U2VsZWN0aW9uU3RlcDpzZWxlY3Rpb25TdGVwSWRmM0FuYWx5c2U=",
          "label": "Etudes des projets",
        },
        Object {
          "__typename": "SelectionStep",
          "id": "U2VsZWN0aW9uU3RlcDpzZWxlY3Rpb25TdGVwSWRmM1ZvdGU=",
          "label": "Vote des Franciliens",
        },
        Object {
          "__typename": "SelectionStep",
          "id": "U2VsZWN0aW9uU3RlcDpzZWxlY3Rpb25TdGVwSWQzZldpbm5lcnM=",
          "label": "Le suivi des projets lauréats",
        },
        Object {
          "__typename": "CollectStep",
          "id": "Q29sbGVjdFN0ZXA6Y29sbGVjdFN0ZXBDbG9zZWRJZGYz",
          "label": "Dépôt des projets",
        },
      ],
      "title": "Budget Participatif IdF 3 zzzz",
    },
  },
}
`;
